# Video_S3_P5

./: .clangd  .cproject  .gitignore  .project  sdkconfig
components/DS18B20/: CMakeLists.txt  ds18b20.c  ds18b20.h
components/DS3231/: ds3231.c  ds3231.h
components/hub75/: CMakeLists.txt  Kconfig  idf_component.yml
components/hub75/include/: hub75_config.h  hub75_types.h
components/hub75/src/color/: color_convert.h  color_lut.cpp  color_lut.h
components/hub75/src/core/: hub75_driver.cpp
components/hub75/src/drivers/: fm6126a.cpp
components/hub75/src/panels/: rotation.h  scan_patterns.h
components/hub75/src/util/: drawing_profiler.h
components/led_panel/: CMakeLists.txt  draw_bitmap.h  font10x15.h  font12x16.h  font20x30.h  font20x40.h  font2x9.h  font3x5.h  font3x9.h  font5x5.h  font5x7.h  font6x16.h  font6x9.h  led_panel.cpp  led_panel.h  logo.h
main/: CMakeLists.txt  app.hpp  clock_alarm.cpp  clock_alarm.h  clock_buttons.cpp  clock_buttons.h  clock_display.cpp  clock_display.h  clock_ethernet.cpp  clock_ethernet.h  clock_menu.cpp  clock_menu.h  clock_modes.cpp  clock_modes.h  clock_protocol.cpp  clock_protocol.h  clock_settings.cpp  clock_settings.h  ethernet_file_server.cpp  ethernet_file_server.h  idf_component.yml  main.cpp  sd_card_test.cpp  sd_card_test.h
